--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -80,6 +80,12 @@
   -webkit-text-fill-color: transparent;
 }
 
+.phoneNav,
+.phoneNav > *,
+.phoneNav > * > * {
+  display: none;
+}
+
 .bar,
 .actualBar,
 .bar > * {
@@ -94,6 +100,13 @@
 @media (min-height: 100vw) {
   .sideNavTrue {
     animation: slideNavOut 0.5s ease-in-out 0s 1 forwards;
+  }
+
+  .sideNavFalse,
+  .sideNavFalse ul,
+  .sideNavFalse ul li,
+  .sideNavFalse ul li a {
+    display: none;
   }
 
   .sideNavTrue,
@@ -152,7 +165,7 @@
     display: block;
     transform: rotateY(180deg);
     position: absolute;
-    top: 20px;
+    top: 25px;
     right: 20px;
   }
 
